Fix z-index error on prev/next buttons

--- a/src/scss/_slider.scss
+++ b/src/scss/_slider.scss
@@ -10,6 +10,7 @@
     margin-bottom: 0;
     width: auto;
     height: auto;
+    z-index: 1;
     &:before {
         @include fa-icon();
         font-size: rem-calc(36);
